--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,7 @@ body {
   }
 
   .middle-c {
+    max-width: 100%;
     height: 100vh;
     background-image: url('../image/jeep.jpg') ;
     background-repeat: no-repeat;
