--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ body {
 
   .middle-c {
     max-width: 100%;
-    height: 100vh;
+    height: 100vmin;
     background-image: url('../image/jeep.jpg') ;
     background-repeat: no-repeat;
     background-attachment: local;
